terraform/sg.tf

# SGs
resource "aws_security_group" "sg_publica" {
  name        = "sg_handsync_publica"
  description = "Acesso HTTP e SSH"
  vpc_id      = aws_vpc.vpc_handsync.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_privada" {
  name        = "sg_handsync_privada"
  description = "Acesso apenas dentro da VPC"
  vpc_id      = aws_vpc.vpc_handsync.id

  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.vpc_handsync.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
